# parallel-prefix-engine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  core  cuda_trial.txt  pixi.toml  refactor_common_tests.sh
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  arg_parser.cpp  main.cpp  matrix_init.cpp  matrix_output.cpp  program_args.cpp  solver_dispatch.cpp  time_utils.cpp
src/common/arg_parser/: CMakeLists.txt  arg_parser.cpp
src/common/program_args/: CMakeLists.txt  program_args.cpp
src/common/solver_dispatch/: CMakeLists.txt  solver_dispatch.cpp
src/common/time_utils/: CMakeLists.txt
src/cuda_prefix_sum/: CMakeLists.txt  cuda_functionality.cpp  cuda_prefix_sum_solver.cpp  cuda_prefix_sum_solver.cu  cuda_prefix_sum_solver_accum.cu  cuda_prefix_sum_solver_hierarchical.cu  cuda_prefix_sum_solver_single_element.cu  cuda_prefix_sum_warp_solver.cpp  cuda_prefix_sum_warp_solver.cu  kernel_hybrid.cu  kernel_launch_params.cpp  kernel_subtiles.cu  subtile_kernel.cu  subtile_kernel_launcher.cu
src/cuda_prefix_sum/include/cuda_prefix_sum/internal/: col_scan_multi_block_kernel.cuh  cuda_solver_registration.hpp  (+17 more)
src/cuda_prefix_sum/kernel_array/: CMakeLists.txt  kernel_array.cpp
src/cuda_prefix_sum/kernel_launch_params/: CMakeLists.txt  kernel_launch_params.cpp
src/cuda_prefix_sum/kernel_launchers/: CMakeLists.txt  cuda_kernel_launcher_selector.cpp
src/cuda_prefix_sum/kernel_launchers/multi_block_kernel_launcher/: CMakeLists.txt  multi_block_kernel_launcher.cu
src/cuda_prefix_sum/kernel_launchers/multi_tile_kernel_launcher/: CMakeLists.txt  multi_tile_kernel_launcher.cu
src/cuda_prefix_sum/kernel_launchers/single_tile_kernel_launcher/: CMakeLists.txt  single_tile_kernel_launcher.cu
src/cuda_prefix_sum/kernel_launchers/subtile_kernel_launcher/: CMakeLists.txt  subtile_kernel_launcher.cu
src/cuda_prefix_sum/kernels/: CMakeLists.txt
src/cuda_prefix_sum/kernels/col_scan_multi_block/: CMakeLists.txt  col_scan_multi_block.cu
src/cuda_prefix_sum/kernels/col_scan_single_block/: CMakeLists.txt  col_scan_single_block.cu
src/cuda_prefix_sum/kernels/edge_buffer_row/: CMakeLists.txt  edge_buffer_row_kernels.cu
src/cuda_prefix_sum/kernels/hillis_steele_row_kernel/: CMakeLists.txt  hillis_steele_row_kernel.cu
src/cuda_prefix_sum/kernels/multi_block_kernel/: CMakeLists.txt
src/cuda_prefix_sum/kernels/multi_tile_kernel/: CMakeLists.txt  multi_tile_kernel.cu
src/cuda_prefix_sum/kernels/row_scan_multi_block/: CMakeLists.txt  row_scan_multi_block.cu
src/cuda_prefix_sum/kernels/row_scan_single_block/: CMakeLists.txt  row_scan_single_block.cu
src/cuda_prefix_sum/kernels/row_to_col_injection/: CMakeLists.txt  row_to_col_injection.cu
src/cuda_prefix_sum/kernels/single_tile_kernel/: CMakeLists.txt  single_tile_kernel.cu
src/cuda_prefix_sum/kernels/sub_tile/: CMakeLists.txt  sub_tile_kernels.cu
src/cuda_prefix_sum/kernels/sub_tile_kernels/: sub_tile_kernels.cu
src/cuda_prefix_sum/kernels/subtile_kernel/: CMakeLists.txt  subtile_kernel.cu
src/cuda_prefix_sum/kernels/unused/: cuda_prefix_sum_solver.cuh  cuda_prefix_sum_solver_accum.cu  cuda_prefix_sum_solver_hierarchical.cu  cuda_prefix_sum_solver_single_element.cu  kernel_hybrid.cu
src/cuda_prefix_sum/registration/: CMakeLists.txt  cuda_solver_linker_anchor.cpp  cuda_solver_registration.cpp
src/mpi_prefix_sum/: CMakeLists.txt  block_matrix_mpi_distributor.cpp  mpi_cartesian_grid.cpp  mpi_environment.cpp  mpi_prefix_sum.cpp  mpi_prefix_sum_solver.cpp  mpi_tester.cpp  mpi_tile_info_distributor.cpp  mpi_utils.cpp  prefix_sum_block_matrix.cpp  prefix_sum_distributor.cpp
src/mpi_prefix_sum/mpi_data_structs/: CMakeLists.txt  prefix_sum_block_matrix.cpp
src/mpi_prefix_sum/mpi_data_transfer/: CMakeLists.txt  mpi_cartesian_grid.cpp  mpi_tile_info_distributor.cpp
src/mpi_prefix_sum/mpi_environment/: CMakeLists.txt  mpi_environment.cpp
src/mpi_prefix_sum/mpi_utils/: CMakeLists.txt  mpi_utils.cpp
src/mpi_prefix_sum/registration/: CMakeLists.txt  mpi_solver_registration.cpp
src/one_sided_comm/: Makefile  tester.cpp
src/prefix_sum/: mpi_prefix_sum.cpp  mpi_tester.cpp  tester.cpp
src/zscaffold_prefix_sum/: CMakeLists.txt.scaffold  zscaffold_prefix_sum.cpp
src/zscaffold_prefix_sum/registration/: CMakeLists.txt.scaffold  zscaffold_solver_registration.cpp
test/: CMakeLists.txt
test/common/: CMakeLists.txt  test_program_args.cpp
test/common/test_matrix_init/: CMakeLists.txt  test_matrix_init.cpp
test/common/test_program_args/: CMakeLists.txt  test_program_args.cpp
test/cuda_prefix_sum/: CMakeLists.txt  test_cuda_prefix_sum_solver.cpp  test_cuda_prefix_sum_solver_multi_tile.cpp  test_cuda_prefix_sum_solver_single_tile.cpp  test_cuda_prefix_sum_warp_solver.cpp
test/cuda_prefix_sum/kernel_launchers/: CMakeLists.txt
test/cuda_prefix_sum/kernel_launchers/multi_block_kernel_launcher/: CMakeLists.txt  test_multi_block_kernel_launcher.cpp
test/cuda_prefix_sum/kernel_launchers/multi_tile_kernel_launcher/: CMakeLists.txt  test_multi_tile_kernel_launcher.cpp
test/cuda_prefix_sum/kernels/: CMakeLists.txt
test/cuda_prefix_sum/kernels/multi_block_kernel/: CMakeLists.txt
test/cuda_prefix_sum/kernels/multi_tile_kernel/: CMakeLists.txt
test/cuda_prefix_sum/kernels/single_tile_kernel/: CMakeLists.txt
test/cuda_prefix_sum/kernels/sub_tile/: CMakeLists.txt  test_sub_tile_kernels.cu
test/cuda_prefix_sum/kernels/subtile_kernel/: CMakeLists.txt  test_subtile_kernel.cpp
test/include/: test_cli_utils.hpp
test/mpi_prefix_sum/: CMakeLists.txt  test_mpi_cartesian_grid.cpp  test_mpi_environment.cpp  test_mpi_prefix_sum_solver.cpp  test_mpi_tile_info_distributor.cpp  test_prefix_sum_block_matrix.cpp
test/mpi_prefix_sum/mpi_cartesian_grid/: CMakeLists.txt  test_mpi_cartesian_grid.cpp
test/mpi_prefix_sum/mpi_environment/: CMakeLists.txt  test_mpi_environment.cpp
test/mpi_prefix_sum/mpi_tile_info_distributor/: CMakeLists.txt  test_mpi_tile_info_distributor.cpp
test/mpi_prefix_sum/prefix_sum_block_matrix/: CMakeLists.txt  test_prefix_sum_block_matrix.cpp
(+74 files in other folders)
